fix dark mode; changes some deprecated class; add little JS to add toggle button dark mode

--- a/themes/akhmad/src/css/markdown.css
+++ b/themes/akhmad/src/css/markdown.css
@@ -21,7 +21,7 @@
 }
 
 .markdown a {
-  @apply text-blue-600 font-semibold;
+  @apply text-blue-600 dark:text-blue-400 font-semibold;
 }
 
 .markdown strong a {
@@ -49,19 +49,19 @@
 }
 
 .markdown h6 {
-  @apply leading-tight text-sm font-semibold text-gray-600 mb-4 mt-6;
+  @apply leading-tight text-sm font-semibold text-slate-600 dark:text-slate-100 mb-4 mt-6;
 }
 
 .markdown blockquote {
-  @apply text-base border-l-4 border-gray-300 pl-4 pr-4 text-gray-600;
+  @apply text-base border-l-4 border-slate-300 dark:border-slate-600 pl-4 pr-4 text-slate-600 dark:text-slate-100;
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-0.5;
+  @apply font-mono text-sm inline bg-slate-200 dark:bg-slate-600 rounded px-1 py-0.5;
 }
 
 .markdown pre {
-  @apply bg-gray-100 rounded p-4;
+  @apply bg-slate-100 dark:bg-slate-600 rounded p-4;
 }
 
 .markdown pre code {
@@ -94,5 +94,5 @@
 
 /* Override pygments style background color. */
 .markdown .highlight pre {
-  @apply bg-gray-100 !important;
+  @apply bg-gray-100 dark:bg-slate-600 !important;
 }
