--- a/themes/akhmad/src/css/styles.css
+++ b/themes/akhmad/src/css/styles.css
@@ -1,9 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer components {
-  .svg_icon {
-    @apply hover:text-gray-600 dark:hover:text-gray-300 fill-current h-6 w-6;
-  }
-}
